# mini-agent

./: .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml
skills/python-tutor/: SKILL.md
skills/python-tutor/references/: beginner-project.md  code-review-checklist.md
src/miniagent/: __init__.py  __main__.py  logging.py
src/miniagent/agent/: __init__.py  context.py  events.py  factory.py  loop.py
src/miniagent/cli/: __init__.py  app.py  commands.py  output.py  repl.py
src/miniagent/config/: __init__.py  loader.py  schema.py
src/miniagent/llm/: __init__.py  client.py  protocol.py
src/miniagent/mcp/: __init__.py  adapter.py  client.py  config.py
src/miniagent/memory/: __init__.py  persistent.py  session.py  store.py
src/miniagent/prompts/: system.md
src/miniagent/skills/: __init__.py  loader.py  model.py
src/miniagent/storage/: __init__.py  jsonl.py  paths.py
src/miniagent/tools/: __init__.py  base.py  files.py  registry.py  shell.py  skill_tools.py
tests/unit/: test_agent_loop.py  test_config.py  test_skills.py  test_tools.py
