[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-agent"
version = "0.1.0"
description = "A small command-line agent for learning agent internals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mini-agent contributors" }]
dependencies = [
  "openai>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "mcp>=1.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
]

[project.scripts]
miniagent = "miniagent.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/miniagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
